Do not throw on RTCPeerConnection.close()

BUG=757254

Change-Id: Ic9fa9c18ea1d215fb0f5f99df197bbe4fad1fd38
Reviewed-on: https://chromium-review.googlesource.com/623408
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496657}
Former-commit-id: cc65039dd61f8b7a86ef93d8424b4324d20323c3